feat: integrate TWPA pump control into experiment1 and utils
- Added TWPA_PUMP initialization in utils.py and updated initialize_instruments function.
- Implemented set_TWPA_pump and turn_off_TWPA_pump functions for pump control.
- Updated experiment1.ipynb to include TWPA pump setup and logging information.
- f(phi) detection needs to be worked on

--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -247,8 +247,9 @@
     "SMU = instruments['Keithley 2400 SourceMeter']\n",
     "LO= instruments['SignalCore SC5511A Signal Generator_10002F25']\n",
     "Drive= instruments['SignalCore SC5511A Signal Generator_1000334C']\n",
+    "TWPA_PUMP = instruments['Rohde&Schwarz RF Source']\n",
     "\n",
-    "initialize_instruments(VNA, DA, SMU, LO, Drive, vs)"
+    "initialize_instruments(VNA, DA, SMU, LO, Drive, vs, TWPA_PUMP)"
    ]
   },
   {
@@ -328,6 +329,22 @@
     "                                      step_channels=[{'name':'Phi','values':phi_arr,'unit':'flux quanta'}])\n",
     "\n",
     "initialize_logging(lfVNA, SPATH, PATH_TO_EXE, FIG_PATH, device_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have checked in advance that the TWPA pump with the following configuration gives us +20 dB in the entire frequency range of interest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_TWPA_pump(f=6.04, power=27)"
    ]
   },
   {
