test: checking the simple f(phi) finder

--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -417,7 +417,7 @@
     "\n",
     "for phi in phi_arr:\n",
     "    voltage = phi_to_voltage(phi, best_fit, unit='V')\n",
-    "    #set_flux_bias_srs(voltage, step = 5e-5)\n",
+    "    set_flux_bias_srs(voltage, step = 5e-5)\n",
     "    print(f\"phi: {phi:.6f}, voltage: {voltage:.6f} V\")\n",
     "    f_phi, f_drive = find_resonance(phi, span, best_fit, vna_power, vna_avg, electrical_delay, show_plot=True)\n",
     "    print(f\"f_phi: {f_phi*1e-9:.6f} GHz, f_drive: {f_drive*1e-9:.6f} GHz\")\n",
