feat: enhance logging and timing in experiment1.ipynb
- Added start time tracking for the flux sweep process.
- Included logging for the completion time of each phi loop and estimated remaining time.
- Improved final logging message to include total execution time for the flux sweep.

--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -314,7 +314,10 @@
     "f_clearing_arr = [5,16]\n",
     "P_clearing_arr = [-10,15]\n",
     "\n",
+    "start_time = time.time()\n",
+    "\n",
     "for phi in phi_arr:\n",
+    "\n",
     "    voltage = phi_to_voltage(phi, best_fit, unit='V')\n",
     "    set_flux_bias_srs(voltage, step = 5e-5)\n",
     "    print(f\"phi: {phi:.6f}, voltage: {voltage:.6f} V\")\n",
@@ -330,10 +333,13 @@
     "            savefile = acquire_IQ_data(phi, num_traces, acquisitionLength_sec, origRateMHz, sampleRateMHz, averageTimeCycle, lowerBound, upperBound)\n",
     "            write_metadata(savefile, acquisitionLength_sec, origRateMHz, f_drive, voltage, T_MXC, T_Rad, phi, f_clearing, P_clearing)\n",
     "            sleep(0.5)\n",
-    "            print(\"\\n\")\n",
+    "\n",
+    "    logging.info(f'Finished loop for phi = {phi:.3f} in {time.time() - start_time:.2f} seconds')\n",
+    "    remaining_time = (time.time() - start_time) * (len(phi_arr) - phi_arr.index(phi) - 1) / (phi_arr.index(phi) + 1)\n",
+    "    logging.info(f'Estimated remaining time: {remaining_time:.2f} seconds')\n",
     "\n",
     "# Close the log file\n",
-    "logging.info(f'Finished flux sweep for {device_name}')"
+    "logging.info(f'Finished flux sweep for {device_name} in {time.time() - start_time:.2f} seconds')"
    ]
   },
   {
