--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -89,9 +89,9 @@
     "device_name = \"L1A\"\n",
     "T_MXC = 26\n",
     "T_Rad = 1.8\n",
-    "experiment_name = f\"{device_name}_RUN0\"\n",
+    "experiment_name = f\"{device_name}_test_RUN1\"\n",
     "\n",
-    "drive_path = r\"G:\\Shared drives\\Quasiparticles_2\"\n",
+    "drive_path = r\"E:\\Quasiparticles\"\n",
     "data_path = set_project(r\"{}\\{}\".format(drive_path, project_name), f\"{experiment_name}\")\n",
     "\n",
     "# Constants\n",
@@ -191,7 +191,7 @@
    ],
    "source": [
     "phi_low, phi_high = 0.3, 0.5\n",
-    "num_points = 30\n",
+    "num_points = 2\n",
     "phi_arr = np.linspace(phi_low, phi_high, num_points)\n",
     "# reverse the phi_arr if negative phis\n",
     "#phi_arr = phi_arr[::-1]\n",
@@ -378,6 +378,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have done some rough analysis and found that the QP induced frequency shift is roughly 0.5 MHz so this is what we are going to set as the detuning.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detuning = 0.5e6 # Hz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -456,6 +472,11 @@
     }
    ],
    "source": [
+    "# test run with 2 points\n",
+    "phi_arr = np.array([0.38,0.39])\n",
+    "f_clearing_arr = np.array([6, 14])\n",
+    "P_clearing_arr = np.array([-10, 10])\n",
+    "\n",
     "start_time = time.time()\n",
     "\n",
     "for phi in phi_arr:\n",
@@ -467,6 +488,7 @@
     "    turn_off_LO()\n",
     "    turn_off_clearing()\n",
     "    f_phi, f_drive = find_resonance(phi, span, best_fit, vna_power, vna_avg, electrical_delay, show_plot=False)\n",
+    "    f_drive = f_drive - detuning\n",
     "    set_LO_tone(f_drive, f_d_power)\n",
     "    print(f\"f_phi: {f_phi*1e-9:.6f} GHz, f_drive: {f_drive*1e-9:.6f} GHz\") \n",
     "\n",
@@ -501,7 +523,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "resonator-fitting-env",
+   "display_name": "lfl_tools",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
