feat: added IQ data-taking

--- a/experiment2.ipynb
+++ b/experiment2.ipynb
@@ -20,24 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project path set to: G:\\Shared drives\\Quasiparticles_2\\Radiator\\032525\\L1A_clearingtone_ON_7GHz_7db__nonlinear_radiator_6K_MXC_26mk_part2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +132,11 @@
    "source": [
     "Make sure that the instruments are set to the correct state.\n",
     "\n",
-    "- The VNA is turned off\n",
     "- The TWPA pump is set to the correct frequency and power\n",
-    "- The LO is set to the correct frequency and power\n",
     "- The SRS is set to the correct voltage\n",
+    "- The LO is set to the correct frequency and power\n",
+    "- The VNA is turned off\n",
     "- The Alazar is configured to acquire the correct number of traces, with the correct acquisition length, sample rate, and average time cycle."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "turn_off_vna()"
    ]
   },
   {
@@ -168,7 +151,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Setting the experiment parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to bias the resonator at a certain voltage and drive it at a certain frequency."
+   ]
   },
   {
    "cell_type": "code",
@@ -176,28 +168,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_traces=1\n",
-    "acquisitionLength_sec=5\n",
-    "origRateMHz=300\n",
-    "sampleRateMHz=10\n",
-    "averageTimeCycle=0\n",
-    "lowerBound=14 # dB for DA attenuator\n",
-    "upperBound=30# dB for DA attenuator\n",
-    "\n",
-    "span = 10e6 # Hz\n",
-    "electrical_delay = 82.584e-9 # s\n",
-    "vna_power = 5\n",
-    "vna_avg = 20\n",
-    "f_d_power = 16\n"
+    "flux_data = load_flux_quanta_analysis('flux_quanta_analysis.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_clearing, P_clearing = None, None"
+    "# Specify phi values of interest (normalized flux)\n",
+    "phi_values = [0.45]  # Example phi values\n",
+    "\n",
+    "phi_results = plot_phi_points(flux_data, phi_values)\n",
+    "guess_data = process_phi_results(phi_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phi = guess_data['quantum_1']['phi']\n",
+    "voltage = guess_data['quantum_1']['voltage']*1e-3 # Convert to V\n",
+    "guess_frequency = guess_data['quantum_1']['frequency']\n",
+    "best_fit = flux_data['quanta']['quantum_1']['best_fit']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the accurate frequency of the resonator at the desired flux point. The idea is to sweep the SRS voltage to the required voltage and take a snapshot of the VNA at the guessed frequency and update the frequency to set the LO tone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electrical_delay = VNA.getValue('Electrical Delay')*1e-9 # Convert to s\n",
+    "electrical_delay"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have done some rough analysis and found that the QP induced frequency shift is roughly 0.5 MHz so this is what we are going to set as the detuning.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vna_power = 5\n",
+    "vna_avg = 20\n",
+    "span = 10e6 # Hz\n",
+    "detuning = 0.5e6 # Hz\n",
+    "f_d_power = 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_phi, f_drive = find_resonance(phi, span, best_fit, vna_power, vna_avg, electrical_delay, detuning, show_plot=True)"
    ]
   },
   {
@@ -218,6 +260,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are not sending in any clearing tone for this experiment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_clearing, P_clearing = None, None\n",
+    "turn_off_clearing()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now set the Alazar parameters and acquire the IQ data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_traces=1\n",
+    "acquisitionLength_sec=5\n",
+    "origRateMHz=300\n",
+    "sampleRateMHz=10\n",
+    "averageTimeCycle=0\n",
+    "lowerBound=14 # dB for DA attenuator\n",
+    "upperBound=30# dB for DA attenuator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -231,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "resonator-fitting-env",
+   "display_name": "lfl_tools",
    "language": "python",
    "name": "python3"
   },
@@ -245,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
