feat: update IQ data acquisition to handle multiple metadata files
- Modified `acquire_IQ_data` function to return a list of metadata file paths instead of a single file.
- Updated relevant code in `experiment1.ipynb` and `experiment2.ipynb` to accommodate the new metadata handling.
- Adjusted logging and directory creation logic for improved clarity and functionality.

--- a/experiment1.ipynb
+++ b/experiment1.ipynb
@@ -441,6 +441,7 @@
         "    \n",
         "    turn_off_LO()\n",
         "    turn_off_clearing()\n",
+        "    DA.setValue('Attenuation', np.average([lowerBound, upperBound]))\n",
         "    f_phi, f_drive = find_resonance(phi, span, best_fit, vna_power, vna_avg, electrical_delay, detuning, show_plot=False, ofq=ofq)\n",
         "    set_LO_tone(f_drive, f_d_power)\n",
         "    print(f\"f_phi: {f_phi*1e-9:.6f} GHz, f_drive: {f_drive*1e-9:.6f} GHz\") \n",
@@ -450,9 +451,11 @@
         "            print(f\"f_clearing: {f_clearing:.6f} GHz, P_clearing: {P_clearing:.6f} dBm\")\n",
         "            set_clearing_tone(f_clearing, P_clearing)\n",
         "            logging.info(f'\\nStarting Alazar acquisition at phi = {phi:.3f} while driving at {f_drive:.6f} GHz')\n",
-        "            savefile = acquire_IQ_data(phi, f_clearing, P_clearing, num_traces, acquisitionLength_sec, origRateMHz, sampleRateMHz, averageTimeCycle, lowerBound, upperBound)\n",
-        "            write_metadata(savefile, acquisitionLength_sec, origRateMHz, f_drive, voltage, T_MXC, T_Rad, phi, f_clearing, P_clearing)\n",
-        "            sleep(0.5)\n",
+        "            # Updated these two lines\n",
+        "            metadata_files = acquire_IQ_data(phi, f_clearing, P_clearing, num_traces, acquisitionLength_sec, origRateMHz, sampleRateMHz, averageTimeCycle, lowerBound, upperBound)\n",
+        "            for metadata_file in metadata_files:\n",
+        "                write_metadata(metadata_file, acquisitionLength_sec, origRateMHz, f_drive, voltage, T_MXC, T_Rad, phi, f_clearing, P_clearing)\n",
+        "            sleep(0.1)\n",
         "\n",
         "    logging.info(f'Finished loop for phi = {phi:.3f} in {time.time() - start_time:.2f} seconds')\n",
         "    print(f'Finished loop for phi = {phi:.3f} in {time.time() - start_time:.2f} seconds')\n",
